syntax = "proto3";
package routeguide;
import "messages.proto";

service RFP {
  rpc SendSow(messages.SOW) returns(messages.Quote);
  rpc SendAgreement(messages.Agreement) returns(messages.Agreement);
  rpc SendReward(messages.Reward) returns(messages.ARAid);
}
